--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -3,11 +3,12 @@ body {
 }
 .content {
     background-color: rgba(255, 255, 255, 0.9);
+    color: black;
     padding-left: 90px;
     padding-right: 90px;
     padding-top: 20px;
     padding-bottom: 60px;
-    max-width: 900px;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
@@ -21,54 +22,71 @@ h1 {
     text-align: center;
     font-family: 'Forte';
     font-size: 60px;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 h2 {
     font-family: 'Forte';
 }
-img {
+p {
+    color: black;
+}
+.firstHeading {
+    padding-top: 20px;
+}
+.galerieBilder {
     max-width: 100%;
     height: 300px;
     margin-right: 20px;
     margin-bottom: 20px;
     transition: all 0.5s;
+    border-radius: 8px;
 }
-img:hover {
+.galerieBilder:hover {
     transform: scale(1.01);
     box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
 }
-table {
+.table {
     font-size: 22px;
     border-collapse: collapse;
-    width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
-td, th {
+.table-element {
     border: 1px solid #dddddd;
     text-align: center;
     padding-left: 8px;
     padding-right: 8px;
-    padding-top: 1px;
+    padding-top: 10px;
     padding-bottom: 1px;
-}
-.menu {
-    text-decoration: none;
     color: black;
+    text-decoration: none;
     font-weight: normal;
+    font-size: 22px;
 }
-.menu:hover {
+.table-element a {
+    color: black;
+}
+.table-element a:hover {
+    text-decoration: none;
+}
+.table-element:hover {
     background-color: rgb(230, 230, 230);
 }
 .dropbtn {
     background-color: rgba(255, 255, 255, 0);
     color: black;
-    padding: 8px;
-    font-size: 20px;
+    padding-right: 8px;
+    padding-left: 8px;
+    padding-bottom: 8px;
     border: none;
     cursor: pointer;
+    text-align: center;
 }
 .dropbtn:hover, .dropbtn:focus {
     background-color: rgb(230, 230, 230);
+    color: black;
+    text-decoration: none;
 }
 .dropdown {
     position: relative;
