--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -4,8 +4,8 @@ body {
 .content {
     background-color: rgba(255, 255, 255, 0.9);
     color: black;
-    padding-left: 90px;
-    padding-right: 90px;
+    padding-left: 6.5%;
+    padding-right: 6.5%;
     padding-top: 20px;
     padding-bottom: 60px;
     max-width: 1100px;
