--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -64,6 +64,11 @@ p {
     font-weight: normal;
     font-size: 22px;
 }
+@media only screen and (max-width: 1025px) {
+    .table-element {
+        width: 100%;
+    }
+}
 .table-element a {
     color: black;
 }
