--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -36,7 +36,7 @@ p {
 }
 .galerieBilder {
     max-width: 100%;
-    height: 300px;
+    max-height: 300px;
     margin-right: 20px;
     margin-bottom: 20px;
     transition: all 0.5s;
