--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -18,6 +18,11 @@ body {
     font-size: 20px;
     font-family: 'Calibri';
 }
+@media only screen and (min-width: 1717px) {
+    .content {
+        max-width: 82%;
+    }
+}
 h1 {
     text-align: center;
     font-family: 'Forte';
