--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -155,3 +155,20 @@ p {
 #impressum {
     padding-top: 40px;
 }
+.jubilaeum-1 {
+    margin-top: 20px;
+    text-align: center;
+}
+.jubilaeum-2 {
+    font-family: 'Permanent Marker';
+}
+.jubilaeum-3 {
+    text-align: center;
+    font-family: 'Permanent Marker';
+}
+.torte-div {
+    text-align: center;
+}
+.torte-img {
+    width: 125px;
+}
