--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,19 @@
+@font-face {
+    font-family: 'Forte';
+    src: url('https://happybirthdayshowhelsinki.github.io/styles/fonts/ForteMT.woff2') format('woff2'),
+        url('https://happybirthdayshowhelsinki.github.io/styles/fonts/ForteMT.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Calibri';
+    src: url('https://happybirthdayshowhelsinki.github.io/styles/fonts/Calibri.woff2') format('woff2'),
+        url('https://happybirthdayshowhelsinki.github.io/styles/fonts/Calibri.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 body {
     background-color: lightblue;
 }
