--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -188,3 +188,32 @@ p {
 .torte-img {
     width: 125px;
 }
+.jubilaeums-foto {
+    max-width: 100%;
+    max-height: 300px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    border-radius: 8px;
+}
+@media only screen and (max-width: 767px) {
+    .jubilaeum-center {
+        text-align: center;
+    }
+}
+@media only screen and (max-width: 1716px) {
+    .jubilaeum-small {
+        display: block;
+    }
+    .jubilaeum-large {
+        display: none;
+    }
+}
+@media only screen and (min-width: 1717px) {
+    .jubilaeum-small {
+        display: none;
+    }
+    .jubilaeum-large {
+        display: block;
+    }
+}
