--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -181,6 +181,8 @@ p {
 .jubilaeum-3 {
     text-align: center;
     font-family: 'Permanent Marker';
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .torte-div {
     text-align: center;
@@ -190,37 +192,24 @@ p {
 }
 .jubilaeums-foto {
     max-width: 100%;
-    max-height: 300px;
+    max-height: 250px;
     margin-right: 20px;
     margin-bottom: 20px;
     margin-top: 10px;
     border-radius: 8px;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 850px) {
+    .jubilaeums-foto {
+        float: right;
+        margin-left: 10px;
+    }
+}
+@media only screen and (max-width: 849px) {
     .jubilaeum-center {
         text-align: center;
-    }
-}
-@media only screen and (max-width: 1716px) {
-    .jubilaeum-small {
-        display: block;
-    }
-    .jubilaeum-large {
-        display: none;
-    }
-}
-@media only screen and (min-width: 1717px) {
-    .jubilaeum-small {
-        display: none;
-    }
-    .jubilaeum-large {
-        display: block;
     }
 }
 .corona-hinweis {
     color: red;
     text-align: center;
-}
-.corona-hinweis-abstand {
-    padding-bottom: 25px;
 }
