--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -171,3 +171,9 @@ p {
 #impressum {
     padding-top: 40px;
 }
+#profilbild {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
