--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -196,6 +196,9 @@ p {
         margin-right: 10px;
     }
 }
+.h2-404 {
+    margin-bottom: 1rem;
+}
 .announcement-1 {
     margin-top: 30px;
     text-align: center;
