--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -182,20 +182,6 @@ p {
     border-radius: 50%;
     margin-bottom: 10px;
 }
-.wiederholung-1 {
-    background-color: lightblue;
-    display: inline-block;
-    padding: 5px;
-    border-radius: 20px;
-    font-family: Calibri;
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-@media only screen and (min-width: 332px) {
-    .wiederholung-2 {
-        margin-right: 10px;
-    }
-}
 .h2-404 {
     margin-bottom: 1rem;
 }
@@ -217,4 +203,23 @@ p {
 }
 .announcement-torte-img {
     width: 125px;
+}
+.exclamation-mark {
+    font-size: 60px;
+}
+@media only screen and (min-width: 768px) {
+    .exclamation-mark {
+        padding-top: 30px;
+    }
+}
+@media only screen and (min-width: 1500px) {
+    .exclamation-mark {
+        padding-top: 15px;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .exclamation-mark {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
 }
