--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -237,3 +237,15 @@ p {
         margin-right: 10px;
     }
 }
+
+
+.sendung-100 {
+    max-width: 100%;
+    max-height: 300px;
+    border-radius: 8px;
+    transition: all 0.5s;
+}
+.sendung-100:hover {
+    transform: scale(1.01);
+    box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
+}
